# textual-passphrase

./: .pylintrc  README.md  TODO.md  pyproject.toml
textual_passphrase/: .phrases.template  __main__.py  app.py  example_module.py  style.css
