[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-passphrase"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Bexli", email = "bex@bexli.co" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["textual==0.9.1"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "textual[dev]==0.9.1",
  "black",
  "pylint"
]

[project.urls]
Documentation = "https://github.com/unknown/textual-passphrase#readme"
Issues = "https://github.com/unknown/textual-passphrase/issues"
Source = "https://github.com/unknown/textual-passphrase"

[tool.hatch.version]
path = "textual_passphrase/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=textual_passphrase --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "textual_passphrase/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
