[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-passphrase"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Bexli", email = "bex@bexli.co" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["textual==0.9.1"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "textual[dev]==0.9.1",
  "black",
  "pylint"
]

[project.urls]
Documentation = "https://github.com/joshpaulie/textual-passphrase#readme"
Issues = "https://github.com/joshpaulie/textual-passphrase/issues"
Source = "https://github.com/joshpaulie/textual-passphrase"

[tool.black]
line-length = 180

[tool.pylint.format]
max-line-length = 180

[tool.pylint."messages control"]
disable =["attribute-defined-outside-init"]

[tool.hatch.version]
path = "textual_passphrase/__about__.py"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "textual_passphrase/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
